--- a/front-end/src/Components/NavBar.css
+++ b/front-end/src/Components/NavBar.css
@@ -1,13 +1,17 @@
 nav {
     display: flex;
     justify-content: space-around;
+    padding-top: 10px;
 }
 
-a:link, a:visited {
+nav a:link, a:visited {
    background-color: rgb(0, 0, 0);
    font-size: 20px;
    font-family: sans-serif;
    text-decoration: none;
    font-weight: bold;
    color: white;
+   padding: 20px;
+   box-shadow: 10px 5px 5px rgb(72, 70, 70);
+   border-radius: 2px;
 }
