--- a/front-end/src/Components/BookingDetails.css
+++ b/front-end/src/Components/BookingDetails.css
@@ -1,10 +1,9 @@
 button {
-    display: block;
-    position: relative;
-    left: 650px;
+    display: inline-block;
+    right: 300px;
     padding: 10px;
     background-color: black;
     color: white;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 14px; 
 }
