--- a/front-end/src/Components/NewBookingForm.css
+++ b/front-end/src/Components/NewBookingForm.css
@@ -2,3 +2,9 @@
     position: relative;
     right: 60px;
 }
+
+input[type=date], input[type=time]{
+    display: block;
+    width: 300px;
+    text-align: center;
+}
